nginx-test/virtservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - "nginx.me.uk"
  gateways:
  - nginx
  http:
  - match:
    - uri:
        prefix: 
    route:
    - destination:
        port:
          number: 80
        host: test-nginx
